修复graal的dao空缺陷